feat(be-post&question): implement post sharing, enhance on post service